--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = curl
 	url = https://github.com/curl/curl.git
 	ignore = dirty
+[submodule "zlib"]
+	path = zlib
+	url = https://github.com/madler/zlib.git
